--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         .logo-container { text-align: center; margin-bottom: 25px; position: relative; z-index: 2; }
         
         .logo-img { 
-            max-width: 180px; 
+            max-width: 280px; /* <--- AUMENTADO AQUI PARA 280PX */
             height: auto; 
             filter: drop-shadow(0 0 15px var(--accent-glow));
             transition: transform 0.3s;
@@ -83,7 +83,7 @@
 
         h2 { 
             color: white; 
-            margin-top: 10px; 
+            margin-top: 15px; 
             font-size: 1.4rem; 
             text-transform: uppercase; 
             letter-spacing: 1px;
